--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="lib/locomotive-scroll.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
-    <title>Document</title>
+    <title>Brandon Mitchell - Front-End Developer</title>
   </head>
   <body>
     <div class="preloader">
