Fixed navLinks hrefs & scrollTo

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
           <a href="/" class="navLink"><span>H</span>ome</a>
         </li>
         <li>
-          <a href="#about" class="navLink"><span>A</span>bout</a>
+          <a href="/" class="navLink"><span>A</span>bout</a>
         </li>
         <li>
-          <a href="#projects" class="navLink"><span>P</span>rojects</a>
+          <a href="/" class="navLink"><span>P</span>rojects</a>
         </li>
         <li>
-          <a href="#contact" class="navLink"><span>C</span>ontact</a>
+          <a href="/" class="navLink"><span>C</span>ontact</a>
         </li>
         <li class="close">
           <i class="fa fa-times"></i>
@@ -309,7 +309,7 @@
         </div>
       </section>
 
-      <a href="#home" class="toTop"><i class="fas fa-arrow-up"></i></a>
+      <a href="/" class="toTop"><i class="fas fa-arrow-up"></i></a>
     </div>
 
     <script src="lib/locomotive-scroll.js"></script>
