--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </header>
 
         <div class="social">
-          <a href="#">
+          <a href="mailto:brandonmitchell217@gmail.com">
             <i class="fas fa-envelope"></i>
             <span class="socialTip">Email Me</span>
           </a>
@@ -72,11 +72,11 @@
             <i class="fab fa-linkedin-in"></i>
             <span class="socialTip">Linked-In</span>
           </a>
-          <a href="#">
+          <a href="https://github.com/brandonmitchell217">
             <i class="fab fa-github"></i>
             <span class="socialTip">Github</span>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/firerepeat">
             <i class="fab fa-twitter"></i>
             <span class="socialTip">Twitter</span>
           </a>
@@ -246,7 +246,9 @@
               </div>
             </div>
           </div>
-          <a href="#" class="ghLink">More Projects</a>
+          <a href="https://github.com/brandonmitchell217" class="ghLink"
+            >More Projects</a
+          >
         </div>
       </section>
       <section id="contact" data-scroll-section>
@@ -270,9 +272,13 @@
             <div class="opt">
               <h2 class="optTitle">Email</h2>
               <div class="links">
-                <a href="#" class="textLnk">brandonmitchell217@gmail.com</a>
+                <a href="mailto:brandonmitchell217@gmail.com" class="textLnk"
+                  >brandonmitchell217@gmail.com</a
+                >
 
-                <a href="#" class="iconLnk"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:brandonmitchell217@gmail.com" class="iconLnk"
+                  ><i class="fas fa-envelope"></i
+                ></a>
               </div>
             </div>
             <div class="opt">
@@ -287,15 +293,23 @@
             <div class="opt">
               <h2 class="optTitle">Github</h2>
               <div class="links">
-                <a href="#" class="textLnk">github.com/brandonmitchell217</a>
-                <a href="#" class="iconLnk"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/brandonmitchell217" class="textLnk"
+                  >github.com/brandonmitchell217</a
+                >
+                <a href="https://github.com/brandonmitchell217" class="iconLnk"
+                  ><i class="fab fa-github"></i
+                ></a>
               </div>
             </div>
             <div class="opt">
               <h2 class="optTitle">Twitter</h2>
               <div class="links">
-                <a href="#" class="textLnk">twitter.com/firerepeat</a>
-                <a href="#" class="iconLnk"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/firerepeat" class="textLnk"
+                  >twitter.com/firerepeat</a
+                >
+                <a href="https://twitter.com/firerepeat" class="iconLnk"
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </div>
             </div>
           </div>
