Updated width for project(even)

--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
   <body>
     <div class="preloader">
       <div class="green">
-        <div class="layer layer1"></div>
-        <div class="layer layer2"></div>
-        <div class="layer layer3"></div>
-        <div class="layer layer4"></div>
-        <div class="layer layer5"></div>
+        <div class="layer"></div>
+        <div class="layer"></div>
+        <div class="layer"></div>
+        <div class="layer"></div>
+        <div class="layer"></div>
         <span id="loadTime"></span>
       </div>
-      <div class="dark"></div>
     </div>
     <nav>
       <div class="burger">
@@ -139,35 +138,38 @@
           <div class="skillsGrid">
             <div class="icon">
               <div class="tip"><span>HTML5</span></div>
-              <img src="img/icons/icons8-html-5.svg" alt="" />
+              <img src="img/icons/icons8-html-5.svg" alt="HTML5" />
             </div>
             <div class="icon">
               <div class="tip"><span>CSS3</span></div>
-              <img src="img/icons/icons8-css3.svg" alt="" />
+              <img src="img/icons/icons8-css3.svg" alt="CSS3" />
             </div>
             <div class="icon">
               <div class="tip"><span>JavaScript</span></div>
-              <img src="img/icons/icons8-javascript.svg" alt="" />
+              <img src="img/icons/icons8-javascript.svg" alt="JavaScript" />
             </div>
             <div class="icon">
               <div class="tip"><span>React</span></div>
-              <img src="img/icons/icons8-react.svg" alt="" />
+              <img src="img/icons/icons8-react.svg" alt="React" />
             </div>
             <div class="icon">
               <div class="tip"><span>Adobe Photoshop</span></div>
-              <img src="img/icons/icons8-adobe-photoshop.svg" alt="" />
+              <img
+                src="img/icons/icons8-adobe-photoshop.svg"
+                alt="Adobe Photoshop"
+              />
             </div>
             <div class="icon">
               <div class="tip"><span>Adobe XD</span></div>
-              <img src="img/icons/icons8-adobe-xd.svg" alt="" />
+              <img src="img/icons/icons8-adobe-xd.svg" alt="Adobe XD" />
             </div>
             <div class="icon">
               <div class="tip"><span>Figma</span></div>
-              <img src="img/icons/icons8-figma.svg" alt="" />
+              <img src="img/icons/icons8-figma.svg" alt="Figma" />
             </div>
             <div class="icon">
               <div class="tip"><span>Blender 2.7+</span></div>
-              <img src="img/icons/icons8-blender-3d.svg" alt="" />
+              <img src="img/icons/icons8-blender-3d.svg" alt="Blender" />
             </div>
           </div>
         </div>
@@ -193,8 +195,8 @@
             <div class="text">
               <h3>Duck Rabbit Brewery</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem
-                ipsum dolor sit amet consectetur.
+                A redesigned page to display different beer selections from a
+                local brewery.
               </p>
               <div class="tags">
                 <span>Design</span>
@@ -212,10 +214,7 @@
             </div>
             <div class="text">
               <h3>Burger Place</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem
-                ipsum dolor sit amet consectetur.
-              </p>
+              <p>An animated landing page for a burger restaurant.</p>
               <div class="tags">
                 <span>Design</span>
                 <span>Animation</span>
@@ -228,13 +227,13 @@
           </div>
           <div class="project">
             <div class="img">
-              <img src="img/vet.jpg" alt="Burger Place" />
+              <img src="img/vet.jpg" alt="Young Vet" />
             </div>
             <div class="text">
               <h3>Young Vet</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Lorem
-                ipsum dolor sit amet consectetur.
+                My first project. This was a site designed for a music artist
+                named Young Vet.
               </p>
               <div class="tags">
                 <span>Design</span>
@@ -316,10 +315,8 @@
         </div>
         <div class="foot">
           <a href="/">
-            <!-- <img src="img/logo1.png" alt="" /> -->
             <p>Made by <span>Brandon</span></p>
           </a>
-          <!-- <span>All Rights Reserved</span> -->
         </div>
       </section>
 
