Turned back on loader. Oi

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Brandon Mitchell - Front-End Developer</title>
   </head>
   <body>
-    <!-- <div class="preloader">
+    <div class="preloader">
       <div class="green">
         <div class="layer"></div>
         <div class="layer"></div>
@@ -23,7 +23,7 @@
         <div class="layer"></div>
         <span id="loadTime"></span>
       </div>
-    </div> -->
+    </div>
     <nav>
       <div class="burger">
         <i class="fa fa-bars"></i>
