Commented out light/dark mode

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="smooth-scroll">
       <main id="home" data-scroll-section>
-        <button class="themeBtn"></button>
+        <!-- <button class="themeBtn"></button> -->
         <header>
           <div class="fName">
             <h1>Brandon</h1>
@@ -99,7 +99,7 @@
           </h3>
         </div>
         <div class="textBox textWrapper">
-          <p class="fadeFromLeft">
+          <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Praesentium est alias sequi aliquam, tempora voluptate ab id aut
             adipisci, maiores rerum earum! Aliquid maxime eius nulla, totam
@@ -110,7 +110,7 @@
             sit amet consectetur adipisicing elit. Esse dignissimos dicta
             debitis sint quas ex earum veniam facere!
           </p>
-          <p class="fadeFromLeft">
+          <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
             ipsum, debitis atque at quasi aliquid amet ad esse veniam minus ex
             adipisci, quis dolorem repudiandae quas placeat temporibus corporis
@@ -124,7 +124,16 @@
             repellendus similique recusandae dolorum blanditiis reiciendis
             inventore tenetur?
           </p>
-        </div>
+          <!-- <p>
+            My name is Brandon and I'm a 30 year old self-taught developer. For
+            the past few years, I've been a stay-at-home father for my two kids.
+            It has been during this time that I've discovered my passion for
+            problem solving & design. It all started when a friend,
+            <a href="#">Young Vet</a>, approached me with wanting to create a
+            website for his music. Taking on this project has since introduced
+            me to learning more about everything from Photoshop to React.
+          </p>
+        --></div>
         <div class="skills">
           <div class="subTitle">
             <h4 class="title">
@@ -398,7 +407,7 @@
     <script src="lib/gsap.min.js"></script>
     <script src="lib/MotionPathPlugin.min.js"></script>
     <script src="lib/ScrollTrigger.min.js"></script>
-    <script src="theme.js"></script>
+    <!-- <script src="theme.js"></script> -->
     <script src="main.js"></script>
   </body>
 </html>
