Added About text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </h3>
         </div>
         <div class="textBox textWrapper">
-          <p>
+          <!-- <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Praesentium est alias sequi aliquam, tempora voluptate ab id aut
             adipisci, maiores rerum earum! Aliquid maxime eius nulla, totam
@@ -123,17 +123,17 @@
             vel quos dolore aut itaque! Sunt tempora iure consequuntur
             repellendus similique recusandae dolorum blanditiis reiciendis
             inventore tenetur?
+          </p> -->
+          <p>
+            I'm a 30 year old <span>Full Stack Developer</span> who enjoys
+            bringing code & ideas to life. I do this utilizing design,
+            animation, & logic in order to create a unique user experience. I
+            aim to always try learning new things every day, and from anyone
+            willing to share their experiences. I can provide a fresh, creative
+            solution to any problem I may face, while having experience with an
+            array of tools in order to get the job done.
           </p>
-          <!-- <p>
-            My name is Brandon and I'm a 30 year old self-taught developer. For
-            the past few years, I've been a stay-at-home father for my two kids.
-            It has been during this time that I've discovered my passion for
-            problem solving & design. It all started when a friend,
-            <a href="#">Young Vet</a>, approached me with wanting to create a
-            website for his music. Taking on this project has since introduced
-            me to learning more about everything from Photoshop to React.
-          </p>
-        --></div>
+        </div>
         <div class="skills">
           <div class="subTitle">
             <h4 class="title">
