Added nav menu ul into a div

--- a/index.html
+++ b/index.html
@@ -28,23 +28,25 @@
       <div class="burger">
         <i class="fa fa-bars"></i>
       </div>
-      <ul class="navList">
-        <li>
-          <a href="/" class="navLink"><span>H</span>ome</a>
-        </li>
-        <li>
-          <a href="/" class="navLink"><span>A</span>bout</a>
-        </li>
-        <li>
-          <a href="/" class="navLink"><span>P</span>rojects</a>
-        </li>
-        <li>
-          <a href="/" class="navLink"><span>C</span>ontact</a>
-        </li>
-        <li class="close">
+      <div class="navList">
+        <ul>
+          <li>
+            <a href="/" class="navLink"><span>H</span>ome</a>
+          </li>
+          <li>
+            <a href="/" class="navLink"><span>A</span>bout</a>
+          </li>
+          <li>
+            <a href="/" class="navLink"><span>P</span>rojects</a>
+          </li>
+          <li>
+            <a href="/" class="navLink"><span>C</span>ontact</a>
+          </li>
+        </ul>
+        <div class="close">
           <i class="fa fa-times"></i>
-        </li>
-      </ul>
+        </div>
+      </div>
     </nav>
 
     <div class="smooth-scroll">
