--- a/index.html
+++ b/index.html
@@ -70,15 +70,18 @@
             <span class="socialTip">Email Me</span>
           </a>
 
-          <a href="#">
+          <a
+            href="https://www.linkedin.com/in/brandonmitchell217"
+            target="_blank"
+          >
             <i class="fab fa-linkedin-in"></i>
             <span class="socialTip">Linked-In</span>
           </a>
-          <a href="https://github.com/brandonmitchell217">
+          <a href="https://github.com/brandonmitchell217" target="_blank">
             <i class="fab fa-github"></i>
             <span class="socialTip">Github</span>
           </a>
-          <a href="https://twitter.com/firerepeat">
+          <a href="https://twitter.com/firerepeat" target="_blank">
             <i class="fab fa-twitter"></i>
             <span class="socialTip">Twitter</span>
           </a>
@@ -127,7 +130,7 @@
             inventore tenetur?
           </p> -->
           <p>
-            I'm a 30 year old <span>Full Stack Developer</span> who enjoys
+            I'm a 30 year old <span>Front-End Developer</span> who enjoys
             bringing code & ideas to life. I do this utilizing design,
             animation, & logic in order to create a unique user experience. I
             aim to always try learning new things every day, and from anyone
@@ -284,8 +287,12 @@
                 <span>Animation</span>
               </div>
               <div class="links">
-                <a href="#">Live</a>
-                <a href="#">Code</a>
+                <a href="#" target="_blank">Live</a>
+                <a
+                  href="https://github.com/brandonmitchell217/DuckRabbit"
+                  target="_blank"
+                  >Code</a
+                >
               </div>
             </div>
           </div>
@@ -301,8 +308,14 @@
                 <span>Animation</span>
               </div>
               <div class="links">
-                <a href="#">Live</a>
-                <a href="#">Code</a>
+                <a href="https://burgerplace.netlify.app/" target="_blank"
+                  >Live</a
+                >
+                <a
+                  href="https://github.com/brandonmitchell217/BurgerPlace1"
+                  target="_blank"
+                  >Code</a
+                >
               </div>
             </div>
           </div>
@@ -321,12 +334,19 @@
                 <span>Animation</span>
               </div>
               <div class="links">
-                <a href="#">Live</a>
-                <a href="#">Code</a>
+                <a href="https://youngvet.netlify.app/" target="_blank">Live</a>
+                <a
+                  href="https://github.com/brandonmitchell217/VetOfficial"
+                  target="_blank"
+                  >Code</a
+                >
               </div>
             </div>
           </div>
-          <a href="https://github.com/brandonmitchell217" class="ghLink"
+          <a
+            href="https://github.com/brandonmitchell217"
+            class="ghLink"
+            target="_blank"
             >More Projects</a
           >
         </div>
@@ -364,8 +384,16 @@
             <div class="opt">
               <h2 class="optTitle">Linked-In</h2>
               <div class="links">
-                <a href="#" class="textLnk">linkedin.com/brandonmitchell217</a>
-                <a href="#" class="iconLnk"
+                <a
+                  href="https://www.linkedin.com/in/brandonmitchell217"
+                  class="textLnk"
+                  target="_blank"
+                  >linkedin.com/brandonmitchell217</a
+                >
+                <a
+                  href="https://www.linkedin.com/in/brandonmitchell217"
+                  class="iconLnk"
+                  target="_blank"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
               </div>
@@ -373,10 +401,16 @@
             <div class="opt">
               <h2 class="optTitle">Github</h2>
               <div class="links">
-                <a href="https://github.com/brandonmitchell217" class="textLnk"
+                <a
+                  href="https://github.com/brandonmitchell217"
+                  class="textLnk"
+                  target="_blank"
                   >github.com/brandonmitchell217</a
                 >
-                <a href="https://github.com/brandonmitchell217" class="iconLnk"
+                <a
+                  href="https://github.com/brandonmitchell217"
+                  class="iconLnk"
+                  target="_blank"
                   ><i class="fab fa-github"></i
                 ></a>
               </div>
@@ -384,10 +418,16 @@
             <div class="opt">
               <h2 class="optTitle">Twitter</h2>
               <div class="links">
-                <a href="https://twitter.com/firerepeat" class="textLnk"
+                <a
+                  href="https://twitter.com/firerepeat"
+                  class="textLnk"
+                  target="_blank"
                   >twitter.com/firerepeat</a
                 >
-                <a href="https://twitter.com/firerepeat" class="iconLnk"
+                <a
+                  href="https://twitter.com/firerepeat"
+                  class="iconLnk"
+                  target="_blank"
                   ><i class="fab fa-twitter"></i
                 ></a>
               </div>
