--- a/index.html
+++ b/index.html
@@ -73,15 +73,24 @@
           <a
             href="https://www.linkedin.com/in/brandonmitchell217"
             target="_blank"
+            aria-label="Linked-In"
           >
             <i class="fab fa-linkedin-in"></i>
             <span class="socialTip">Linked-In</span>
           </a>
-          <a href="https://github.com/brandonmitchell217" target="_blank">
+          <a
+            href="https://github.com/brandonmitchell217"
+            target="_blank"
+            aria-label="Github"
+          >
             <i class="fab fa-github"></i>
             <span class="socialTip">Github</span>
           </a>
-          <a href="https://twitter.com/firerepeat" target="_blank">
+          <a
+            href="https://twitter.com/firerepeat"
+            target="_blank"
+            aria-label="Twitter"
+          >
             <i class="fab fa-twitter"></i>
             <span class="socialTip">Twitter</span>
           </a>
