--- a/index.html
+++ b/index.html
@@ -296,7 +296,11 @@
                 <span>Animation</span>
               </div>
               <div class="links">
-                <a href="#" target="_blank">Live</a>
+                <a
+                  href="https://duckrabbitredesign.netlify.app/"
+                  target="_blank"
+                  >Live</a
+                >
                 <a
                   href="https://github.com/brandonmitchell217/DuckRabbit"
                   target="_blank"
