Updated project info & adjusted the projects query

--- a/index.html
+++ b/index.html
@@ -283,26 +283,24 @@
         <div class="projectBox">
           <div class="project">
             <div class="img">
-              <img src="img/duckrabbit.jpg" alt="Duck Rabbit Brewery" />
+              <img src="img/cakeByKate.jpg" alt="Cakes by Kate" />
             </div>
             <div class="text">
-              <h3>Duck Rabbit Brewery</h3>
+              <h3>Cakes by Kate</h3>
               <p>
-                A redesigned page to display different beer selections from a
-                local brewery.
+                A homepage for an imaginary cake business. Uses SwiperJS &
+                jQuery.
               </p>
               <div class="tags">
                 <span>Design</span>
-                <span>Animation</span>
+                <span>jQuery</span>
               </div>
               <div class="links">
-                <a
-                  href="https://duckrabbitredesign.netlify.app/"
-                  target="_blank"
+                <a href="https://cakesbykate.netlify.app/" target="_blank"
                   >Live</a
                 >
                 <a
-                  href="https://github.com/brandonmitchell217/DuckRabbit"
+                  href="https://github.com/brandonmitchell217/cakesByKate"
                   target="_blank"
                   >Code</a
                 >
@@ -315,7 +313,7 @@
             </div>
             <div class="text">
               <h3>Burger Place</h3>
-              <p>An animated landing page for a burger restaurant.</p>
+              <p>An animated landing page for a fake burger restaurant.</p>
               <div class="tags">
                 <span>Design</span>
                 <span>Animation</span>
@@ -339,7 +337,7 @@
             <div class="text">
               <h3>Young Vet</h3>
               <p>
-                My first project. This was a site designed for a music artist
+                My first project. This was a site designed for the music artist
                 named Young Vet.
               </p>
               <div class="tags">
