Added meta tags, landscape media query test1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Brandon Mitchell - Portfolio" />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, GSAP, Animation, Portfolio"
+    />
+    <meta name="author" content="Brandon Mitchell" />
     <link rel="icon" type="image/x-icon" href="img/bICO.ico" />
     <script
       src="https://kit.fontawesome.com/cdd1bf9d03.js"
