Changed some wording

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             </div>
             <div class="text">
               <h3>Burger Place</h3>
-              <p>An animated landing page for a fake burger restaurant.</p>
+              <p>An animated landing page for a mock burger restaurant.</p>
               <div class="tags">
                 <span>Design</span>
                 <span>Animation</span>
