Added my resume link

--- a/index.html
+++ b/index.html
@@ -382,10 +382,20 @@
           </h3>
         </div>
         <div class="content">
-          <p>
-            I'm currently open to new opportunities, please reach out if you
-            would like to work together!
-          </p>
+          <div class="leftTop">
+            <p>
+              I'm currently open to new opportunities, please reach out if you
+              would like to work together!
+            </p>
+
+            <a
+              href="https://drive.google.com/file/d/1jhx3y8R7koTwGV31Q72OCYarWYEwuc7N/view?usp=sharing"
+              target="_blank"
+              class="resumeLnk"
+            >
+              My Resume
+            </a>
+          </div>
           <div class="contactBox">
             <div class="opt">
               <h2 class="optTitle">Email</h2>
