Added varying sized images & adjusted some media queries

--- a/index.html
+++ b/index.html
@@ -290,7 +290,13 @@
         <div class="projectBox">
           <div class="project">
             <div class="img">
-              <img src="img/cakeByKate.jpg" alt="Cakes by Kate" />
+              <!-- <img src="img/cakeByKate.jpg" alt="Cakes by Kate" /> -->
+              <img
+                srcset="img/cakeByKate-2x.jpg 480w, img/cakeByKate-3x.jpg 1200w"
+                sizes="(max-width: 1200px) 100vw"
+                src="img/cakeByKate.jpg"
+                alt="Cakes by Kate"
+              />
             </div>
             <div class="text">
               <h3>Cakes by Kate</h3>
@@ -316,7 +322,16 @@
           </div>
           <div class="project">
             <div class="img">
-              <img src="img/burgerPlace.jpg" alt="Burger Place" />
+              <!-- <img src="img/burgerPlace.jpg" alt="Burger Place" /> -->
+              <img
+                srcset="
+                  img/burgerPlace-2x.jpg  480w,
+                  img/burgerPlace-3x.jpg 1200w
+                "
+                sizes="(max-width: 1200px) 100vw"
+                src="img/burgerPlace.jpg"
+                alt="Burger Place"
+              />
             </div>
             <div class="text">
               <h3>Burger Place</h3>
@@ -339,7 +354,13 @@
           </div>
           <div class="project">
             <div class="img">
-              <img src="img/vet.jpg" alt="Young Vet" />
+              <!-- <img src="img/vet.jpg" alt="Young Vet" /> -->
+              <img
+                srcset="img/vet-2x.jpg 480w, img/vet-3x.jpg 1200w"
+                sizes="(max-width: 1200px) 100vw"
+                src="img/vet.jpg"
+                alt="Young Vet"
+              />
             </div>
             <div class="text">
               <h3>Young Vet</h3>
