Added a new project & fixed mobile query for Projects

--- a/index.html
+++ b/index.html
@@ -197,6 +197,33 @@
           <div class="project">
             <div class="img">
               <img
+                srcset="img/xcel-2x.jpg 480w, img/xcel-3x.jpg 1200w"
+                sizes="(max-width: 1200px) 100vw"
+                src="img/xcel.jpg"
+                alt="Xcel"
+              />
+            </div>
+            <div class="text">
+              <h3>Xcel Solutions</h3>
+              <p>A landing page made using React & SCSS.</p>
+              <div class="tags">
+                <span>Design</span>
+                <span>React</span>
+                <span>Sass</span>
+              </div>
+              <div class="links">
+                <a href="https://xcel.netlify.app/" target="_blank">Live</a>
+                <a
+                  href="https://github.com/brandonmitchell217/xcel-react"
+                  target="_blank"
+                  >Code</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="img">
+              <img
                 srcset="img/cakeByKate-2x.jpg 480w, img/cakeByKate-3x.jpg 1200w"
                 sizes="(max-width: 1200px) 100vw"
                 src="img/cakeByKate.jpg"
@@ -253,7 +280,8 @@
               </div>
             </div>
           </div>
-          <div class="project">
+
+          <!-- <div class="project">
             <div class="img">
               <img
                 srcset="img/vet-2x.jpg 480w, img/vet-3x.jpg 1200w"
@@ -281,7 +309,7 @@
                 >
               </div>
             </div>
-          </div>
+          </div> -->
           <a
             href="https://github.com/brandonmitchell217"
             class="ghLink"
