A few description text changes in projects

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </div>
             <div class="text">
               <h3>Cakes by Kate</h3>
-              <p>A landing page for a mock cake business.</p>
+              <p>A landing page for a cake business.</p>
               <div class="tags">
                 <span>Design</span>
                 <span>jQuery</span>
@@ -263,7 +263,7 @@
             </div>
             <div class="text">
               <h3>Burger Place</h3>
-              <p>An animated landing page for a mock burger restaurant.</p>
+              <p>An animated landing page for a burger restaurant.</p>
               <div class="tags">
                 <span>Design</span>
                 <span>Animation</span>
