--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                 srcset="img/xcel-2x.jpg 480w, img/xcel-3x.jpg 1200w"
                 sizes="(max-width: 1200px) 100vw"
                 src="img/xcel.jpg"
-                alt="Xcel"
+                alt="X-cel"
               />
             </div>
             <div class="text">
-              <h3>Xcel Solutions</h3>
+              <h3>X-cel Solutions</h3>
               <p>A landing page made using React & SCSS.</p>
               <div class="tags">
                 <span>Design</span>
