--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="text">
               <h3>X-cel Solutions</h3>
-              <p>A landing page made using React & SCSS.</p>
+              <p>A landing page made using React & Sass.</p>
               <div class="tags">
                 <span>Design</span>
                 <span>React</span>
