--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </p>
 
             <a
-              href="https://drive.google.com/file/d/1jhx3y8R7koTwGV31Q72OCYarWYEwuc7N/view?usp=sharing"
+              href="https://docs.google.com/document/d/1AlGYbrGMFI1KyQM7y_HCyj0SKZsARzEt/edit?usp=sharing&ouid=110500618699867903856&rtpof=true&sd=true"
               target="_blank"
               class="resumeLnk"
             >
