Changed Contact section, dude got a job

--- a/index.html
+++ b/index.html
@@ -303,17 +303,18 @@
         <div class="content">
           <div class="leftTop">
             <p>
-              I'm currently open to new opportunities, please reach out if you
-              would like to work together!
+              <!-- I'm currently open to new opportunities, please reach out if you
+              would like to work together! -->
+              Please feel free to reach out if you have any questions!
             </p>
 
-            <a
+            <!-- <a
               href="https://docs.google.com/document/d/1AlGYbrGMFI1KyQM7y_HCyj0SKZsARzEt/edit?usp=sharing&ouid=110500618699867903856&rtpof=true&sd=true"
               target="_blank"
               class="resumeLnk"
             >
               My Resume
-            </a>
+            </a> -->
           </div>
           <div class="contactBox">
             <div class="opt">
